package br.com.academiaDev.application.repositories;

public class UserRepository {
    
}
