package br.com.academiaDev.domain.entities;

public class Admin extends User {
    public Admin(String name, String email) {
        super(name, email);
    }
}
