package br.com.academiaDev.domain.entities;

public class Enrollment {
    
}
