package br.com.academiaDev.domain.enums;

public enum CourseStatus {
    ACTIVE,
    INACTIVE
}