package br.com.academiaDev.domain.enums;

public enum DifficultyLevel {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED
}